--- a/autoscale.yaml
+++ b/autoscale.yaml
@@ -38,6 +38,9 @@ Resources:
       SecurityGroups:
         - !ImportValue "ALBSecurityGroupId" # Import Load Balancer Security Group
       Scheme: "internet-facing"
+      LoadBalancerAttributes:
+        - Key: idle_timeout.timeout_seconds
+          Value: '60'
 
   # Target Group for Load Balancer
   EcommerceTargetGroup:
@@ -45,16 +48,18 @@ Resources:
     Properties:
       Name: "EcommerceTargetGroup"
       VpcId: !ImportValue "VPCId"  # Ensure you import the correct VPC
+      Port: 80
       Protocol: HTTP  # Specify the protocol
-      Port: 80  # Specify the port for the target group
-      HealthCheckProtocol: HTTP
-      HealthCheckPort: "80"
+      TargetType: instance
       HealthCheckPath: "/"
+      HealthCheckProtocol: HTTP
       HealthCheckIntervalSeconds: 30
+      HealthyThresholdCount: 3
+      UnhealthyThresholdCount: 3
+      HealthCheckPort: "80"
       HealthCheckTimeoutSeconds: 5
       Matcher:
         HttpCode: "200"
-      TargetType: instance
 
   # Listener for Load Balancer
   EcommerceListener:
@@ -85,8 +90,8 @@ Resources:
 
             # Go to the application directory
             cd /var/www/html
-
-            # Pull the latest code from the GitHub repository
+            sudo su
+            git checkout -- .
             git pull origin main
 
             # Ensure permissions are correct for the web server
@@ -106,67 +111,78 @@ Resources:
     Type: AWS::AutoScaling::AutoScalingGroup
     DependsOn: EcommerceLoadBalancer
     Properties:
-      DesiredCapacity: 2
-      MaxSize: 5
-      MinSize: 1
       VPCZoneIdentifier:
         - !ImportValue "PrivateSubnet1"
         - !ImportValue "PrivateSubnet2"
       LaunchTemplate:
         LaunchTemplateId: !Ref PrivateLaunchTemplate
         Version: !GetAtt PrivateLaunchTemplate.LatestVersionNumber
+      MinSize: 1
+      MaxSize: 5
+      DesiredCapacity: 2
       TargetGroupARNs:
         - !Ref EcommerceTargetGroup
+      HealthCheckType: ELB
+      HealthCheckGracePeriod: 300
 
   # Scale-Up Policy for Private Instances
   PrivateScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
     DependsOn: PrivateAutoScalingGroup  # Ensure Auto Scaling Group is created first
     Properties:
-      AdjustmentType: ChangeInCapacity
       AutoScalingGroupName: !Ref PrivateAutoScalingGroup
-      Cooldown: 300
-      ScalingAdjustment: 1
+      PolicyType: StepScaling
+      StepAdjustments:
+      - MetricIntervalLowerBound: 0
+        ScalingAdjustment: 1
+      AdjustmentType: ChangeInCapacity
+      Cooldown: 120
+      EstimatedInstanceWarmup: 120
 
   # Scale-Down Policy for Private Instances
   PrivateScaleDownPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
-    DependsOn: PrivateAutoScalingGroup  # Ensure Auto Scaling Group is created first
+    DependsOn: PrivateAutoScalingGroup
     Properties:
-      AdjustmentType: ChangeInCapacity
       AutoScalingGroupName: !Ref PrivateAutoScalingGroup
-      Cooldown: 300
-      ScalingAdjustment: -1
+      PolicyType: StepScaling
+      StepAdjustments:
+      - MetricIntervalUpperBound: 0
+        ScalingAdjustment: -1
+      AdjustmentType: ChangeInCapacity
+      Cooldown: 120
+      EstimatedInstanceWarmup: 120
 
-  # CloudWatch Alarms for Private Instances
-  HighCPUAlarmPrivate:
+  # Scale-Up Alarm (>= 30% CPU)
+  ScaleUpAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmDescription: "Alarm when CPU exceeds 80% on private instances"
+      AlarmDescription: "Scale up when CPU Utilization is >= 50% for 50 seconds"
       MetricName: "CPUUtilization"
       Namespace: "AWS/EC2"
       Statistic: "Average"
-      Period: 300
-      EvaluationPeriods: 2
-      Threshold: 80
-      ComparisonOperator: "GreaterThanThreshold"
+      Period: 60
+      EvaluationPeriods: 1
+      Threshold: 50
+      ComparisonOperator: "GreaterThanOrEqualToThreshold"
       AlarmActions:
         - !Ref PrivateScaleUpPolicy
       Dimensions:
         - Name: "AutoScalingGroupName"
           Value: !Ref PrivateAutoScalingGroup
 
-  LowCPUAlarmPrivate:
+  # Scale-Down Alarm (<= 10% CPU)
+  ScaleDownAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmDescription: "Alarm when CPU falls below 20% on private instances"
+      AlarmDescription: "Scale down when CPU Utilization is <= 10% for 60 seconds"
       MetricName: "CPUUtilization"
       Namespace: "AWS/EC2"
       Statistic: "Average"
-      Period: 300
-      EvaluationPeriods: 2
-      Threshold: 20
-      ComparisonOperator: "LessThanThreshold"
+      Period: 60
+      EvaluationPeriods: 1
+      Threshold: 10
+      ComparisonOperator: "LessThanOrEqualToThreshold"
       AlarmActions:
         - !Ref PrivateScaleDownPolicy
       Dimensions:
